Fixed collapsing View Building page photos.

--- a/style.css
+++ b/style.css
@@ -190,10 +190,21 @@ viewbuilding.html page
 }
 
 .column .photo {
-  margin: 4px 0;
   width: 100%;
   vertical-align: middle;
   border: 2px solid #b2977d;/* brown accent color */
+}
+
+.large-photo-container {
+  height: 0;
+  padding-bottom: 134%;
+  margin: 4px 0;
+}
+
+.small-photo-container {
+  height: 0;
+  padding-bottom: 76%;
+  margin: 4px 0;
 }
 
 /*******************
